syntax = "proto3";

option java_package = "network.cere.ddc.proto";
option java_outer_classname = "Storage";

package pb;

option go_package = "/pb";

message Piece {
  bytes         data     = 1;
  uint64        bucketId = 2 [jstype = JS_STRING];
  repeated Tag  tags     = 3;
  repeated Link links    = 4;
}

message Signature {
  string value  = 1;
  string signer = 2;
  string scheme = 3;
}

message SignedPiece {
  Piece     piece     = 1;
  Signature signature = 2;
}

message Tag {
  string        key  = 1;
  string        value = 2;
  SearchType    searchable    = 3;
}

enum SearchType {
  RANGE             = 0;
  NOT_SEARCHABLE    = 1;
}

message Query {
  uint64       bucketId = 1 [jstype = JS_STRING];
  repeated Tag tags     = 2;
  bool         skipData = 3;
}

message SearchResult {
  repeated SearchedPiece searchedPieces = 1;
}

message SearchedPiece {
  SignedPiece signedPiece = 1;
  string cid = 2;
}

message Link {
  string          cid  = 1;
  uint64          size = 2 [jstype = JS_STRING];
  string          name = 3;
}
